# itai

./: Cargo.toml  DumpFunctionSignatures.py  exports_signatures.txt
dylib/: Cargo.toml
dylib/src/: console.rs  enumeration.rs  lib.rs  msgbox.rs
inject/: Cargo.toml
inject/src/: main.rs
inject/src/inject/: injector.rs  mod.rs  unsafe_wrapped.rs
