[package]
name = "dylib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
# thiserror = "2.0.17"
widestring = "1.2.1"
winapi = { version = "0.3.9", features = [
    "minwindef",
    "winuser",
    "winnt",
    "consoleapi",
    "processenv",
    "errhandlingapi",
    "winbase",
    "wincon",
    "handleapi",
    "tlhelp32"
] }
