[package]
name = "inject"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
ntapi = "0.4.1"
thiserror = "2.0.17"
widestring = "1.2.1"
winapi = { version = "0.3.9", features = [
    "winnt",
    "minwinbase",
    "processthreadsapi",
    "windef",
    "winbase",
    "winuser",
    "memoryapi",
    "errhandlingapi",
    "tlhelp32",
    "libloaderapi",
    "fileapi",
    "handleapi",
    "synchapi",
] }
